compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__errors__bit_string_segment_conflicting_options_bit_string.snap
---
source: compiler-core/src/type_/tests/errors.rs
expression: "case <<1>> { <<1:bit_string-binary>> -> 1 }"

---

error: BitString Segment Error
  ┌─ /src/one/two.gleam:1:29
  │
1 │ case <<1>> { <<1:bit_string-binary>> -> 1 }
  │                             ^^^^^^ This is an extra type specifier.

Hint: This segment already has the type bit_string.
See: https://gleam.run/book/tour/bit-strings.html

